tests/ui/numbers-arithmetic/overflowing-rsh-1.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-rsh-1.rs:7:14
   |
LL |     let _x = -1_i32 >> 32;
   |              ^^^^^^^^^^^^ attempt to shift right by `32_i32`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-rsh-1.rs:4:9
   |
LL | #![deny(arithmetic_overflow)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

